moved folder cvrp + drag fix + color binding + better stats

--- a/src/main/resources/cvrp/cvrp.fxml
+++ b/src/main/resources/cvrp/cvrp.fxml
@@ -94,7 +94,7 @@
       <children>
             <SplitPane dividerPositions="0.8012519561815337" prefHeight="695.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <items>
-                <AnchorPane fx:id="graphPane" minHeight="0.0" minWidth="0.0" onMouseDragged="#handleGraphPaneDrag" onScroll="#handleGraphPaneScroll" prefHeight="160.0" prefWidth="100.0" style="-fx-border-color: lightgray;">
+                <AnchorPane fx:id="graphPane" minHeight="0.0" minWidth="0.0" onMouseDragged="#handleGraphPaneDragged" onMousePressed="#handleGraphPanePressed" onScroll="#handleGraphPaneScroll" prefHeight="160.0" prefWidth="100.0" style="-fx-border-color: lightgray;">
                      <children>
                         <Label fx:id="graphZoneLabel" alignment="CENTER" layoutX="1.0" prefHeight="693.0" prefWidth="1021.0" text="Le graphe apparaîtra ici" textAlignment="CENTER" textFill="#8a8a8a" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
                            <font>
@@ -121,7 +121,7 @@
                                           <Button layoutX="18.0" layoutY="195.0" mnemonicParsing="false" onMouseClicked="#testClicked" text="Point test" />
                                           <ComboBox layoutX="18.0" layoutY="275.0" prefWidth="150.0" />
                                           <Label layoutX="17.0" layoutY="258.0" text="Type d'algorithme" />
-                                          <Label layoutX="21.0" layoutY="116.0" text="Nombre de points : " />
+                                          <Label layoutX="21.0" layoutY="116.0" text="Nombre de clients : " />
                                           <AnchorPane fx:id="loadingPane" layoutX="2.0" layoutY="613.0" prefHeight="51.0" prefWidth="251.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                              <children>
                                                 <ProgressBar fx:id="loadingProgressBar" prefHeight="18.0" prefWidth="230.0" progress="0.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="9.0" />
@@ -130,7 +130,9 @@
                                              </children>
                                           </AnchorPane>
                                           <Button layoutX="16.0" layoutY="320.0" mnemonicParsing="false" onAction="#startSimulation" prefHeight="25.0" prefWidth="221.0" text="Démarrer" />
-                                          <Label fx:id="statsPointsNumberLabel" layoutX="127.0" layoutY="116.0" text="0" />
+                                          <Label fx:id="statNbClients" layoutX="127.0" layoutY="116.0" text="0" />
+                                          <Label layoutX="21.0" layoutY="133.0" text="Nombre de véhicules : " />
+                                          <Label fx:id="statNbVehicles" layoutX="143.0" layoutY="133.0" text="0" />
                                        </children>
                                     </AnchorPane>
                               </content>
@@ -140,7 +142,7 @@
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
                                           <CheckBox fx:id="arrowCheckbox" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="204.0" selected="true" text="Afficher les flèches" />
-                                          <CheckBox fx:id="colorCheckbox" layoutX="14.0" layoutY="40.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="204.0" selected="true" text="Couleurs différentes" />
+                                          <CheckBox fx:id="colorCheckbox" layoutX="14.0" layoutY="40.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="204.0" selected="true" text="Afficher les couleurs" />
                                        </children>
                                     </AnchorPane>
                               </content>
